tests/typechecker/pass/022-for-loop-float.hyg
let mutable x = 0.0f;

for (x <- 0.1f; x < 2.0f; x <- x + 0.3f) ()
