tests/typechecker/fail/022-for-loop-cond.hyg
let mutable x = 0;

for (x <- 0; x - 3; x <- x + 1) ()
